# my-project

backend/: .gitignore  app.py  config.py  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Dashboard.jsx
frontend/src/views/: Home.jsx  Logout.jsx  Profile.jsx
