[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Le backend de mon projet de fin d'année"
authors = ["Emmanuel Boika <emmanboyka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
Flask-Cors = "^4.0.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
Flask = "^3.0.2"
Flask-Cors = "^4.0.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
